--- a/index.html
+++ b/index.html
@@ -1,37 +1,30 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Movie App</title>
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeo0Jv3mwB3lyN9EBo+0PY4N1vYjMBrh0XK6kXWYO9tBT6OB"
-      crossorigin="anonymous"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Movie App</title>
 
-    <!-- Bootstrap Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
 
-    <!-- Bootstrap Bundle JS (com Popper para o menu funcionar) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-qQSIJAwzj+qZTbvsL4WTH6L+os5knfkRsAa1REf/GQ/zpOihLO0LUbdgf3l5hD2e"
-      crossorigin="anonymous"
-      defer
-    ></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeo0Jv3mwB3lyN9EBo+0PY4N1vYjMBrh0XK6kXWYO9tBT6OB" crossorigin="anonymous" />
 
-    <!-- Seu código React -->
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qQSIJAwzj+qZTbvsL4WTH6L+os5knfkRsAa1REf/GQ/zpOihLO0LUbdgf3l5hD2e" crossorigin="anonymous"
+    defer></script>
+
+
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
